stupid sexy inequality

--- a/lab6/izvod derivacije.ipynb
+++ b/lab6/izvod derivacije.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\frac{\\partial o_k}{\\partial \\pi_i} = \\frac{\\sum_{j=1,j!=i}^{m} \\pi_j(z_i-z_j)}{(\\sum_{j=1}^{m} \\pi_j)^2} $$"
+    "$$ \\frac{\\partial o_k}{\\partial \\pi_i} = \\frac{\\sum_{j=1,j\\neq i}^{m} \\pi_j(z_i-z_j)}{(\\sum_{j=1}^{m} \\pi_j)^2} $$"
    ]
   },
   {
@@ -81,28 +81,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\frac{\\partial E_k}{\\partial a_i} = -(y_k - o_k) \\frac{\\sum_{j=1,j!=i}^{m} \\pi_j(z_i-z_j)}{(\\sum_{j=1}^{m} \\pi_j)^2} \\beta_i b_i\\alpha_i(1-\\alpha_i) $$"
+    "$$ \\frac{\\partial E_k}{\\partial a_i} = -(y_k - o_k) \\frac{\\sum_{j=1,j\\neq i}^{m} \\pi_j(z_i-z_j)}{(\\sum_{j=1}^{m} \\pi_j)^2} \\beta_i b_i\\alpha_i(1-\\alpha_i) $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\frac{\\partial E_k}{\\partial b_i} = -(y_k - o_k) \\frac{\\sum_{j=1,j!=i}^{m} \\pi_j(z_i-z_j)}{(\\sum_{j=1}^{m} \\pi_j)^2} \\beta_i (-(x - a_i)\\alpha_i(1-\\alpha_i)) $$"
+    "$$ \\frac{\\partial E_k}{\\partial b_i} = -(y_k - o_k) \\frac{\\sum_{j=1,j\\neq i}^{m} \\pi_j(z_i-z_j)}{(\\sum_{j=1}^{m} \\pi_j)^2} \\beta_i (-(x - a_i)\\alpha_i(1-\\alpha_i)) $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\frac{\\partial E_k}{\\partial a_i} = -(y_k - o_k) \\frac{\\sum_{j=1,j!=i}^{m} \\pi_j(z_i-z_j)}{(\\sum_{j=1}^{m} \\pi_j)^2} \\pi_i b_i(1-\\alpha_i) $$"
+    "$$ \\frac{\\partial E_k}{\\partial a_i} = -(y_k - o_k) \\frac{\\sum_{j=1,j\\neq i}^{m} \\pi_j(z_i-z_j)}{(\\sum_{j=1}^{m} \\pi_j)^2} \\pi_i b_i(1-\\alpha_i) $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\frac{\\partial E_k}{\\partial b_i} = -(y_k - o_k) \\frac{\\sum_{j=1,j!=i}^{m} \\pi_j(z_i-z_j)}{(\\sum_{j=1}^{m} \\pi_j)^2} \\pi_i (a_i - x)(1-\\alpha_i) $$"
+    "$$ \\frac{\\partial E_k}{\\partial b_i} = -(y_k - o_k) \\frac{\\sum_{j=1,j\\neq i}^{m} \\pi_j(z_i-z_j)}{(\\sum_{j=1}^{m} \\pi_j)^2} \\pi_i (a_i - x)(1-\\alpha_i) $$"
    ]
   },
   {
