fixed neural net hw5

--- a/lab6/Lab06 report.ipynb
+++ b/lab6/Lab06 report.ipynb
@@ -43,7 +43,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = open(\"rules.txt\", \"r\")\n",
@@ -96,7 +98,7 @@
     "    i = i + 1\n",
     "    y2 = sigm(c, d, X)\n",
     "    plt.subplot(len(rules), 3, i)\n",
-    "    plt.title(r'$\\sigma(c,d,x)$')\n",
+    "    plt.title(r'$\\sigma(c,d,y)$')\n",
     "    plt.plot(X, y2)\n",
     "    i = i + 1\n",
     "    ax = fig.add_subplot(len(rules), 3, i, projection='3d', title=r'$\\mu_{%d}(x)$' % k)\n",
@@ -117,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = open(\"errors-eta-sgd.txt\", \"r\")\n",
@@ -213,7 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = open(\"error.txt\", \"r\")\n",
